tests/invalid_inputs/sema/invalid_constructor.cpp

struct S {
	// make sure that the name is checked if there are no declaration specifiers
	P() {}
};
